kasih auth JWT di swagger
